Bug 618899 - Crash [@ RtlpWaitForCriticalSection | RtlEnterCriticalSection ][@ RtlpWaitOnCriticalSection | RtlpDeCommitFreeBlock | Accelerator.dll@0x56f6c ][@ Accelerator.dll@0x57ab0 ] with Video Accelerator 3.2.1.6 from Speedbit; r=bsmedberg a=blocking-final+